@@ -30,6 +30,7 @@ Maintenance
 * Fix: Closing DICOM associations after running query/retrieve from REST API
 * Fix: Allow creation of MONOCHROME1 grayscale images in tools/create-dicom
 * Remove invalid characters from badly-encoded UTF-8 strings (impacts PostgreSQL)
+* Orthanc starts even if jobs from a previous execution cannot be unserialized
 
 
 Version 1.4.2 (2018-09-20)
